add general changes to swagger and user-ctrl
